# a3rtpy

./: README.md  README.rst  mypy.ini  pyproject.toml  tox.ini
src/a3rtpy/: __init__.py  cli.py  client.py  session.py  talk.py
tests/: test_a3rtpy.py  test_client.py  test_talk.py
