[tool.poetry]
name = "a3rtpy"
version = "0.1.0"
description = ""
authors = ["shimakaze-git <shimakaze.soft+github@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
tox = "^3.24.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
