[tool.poetry]
name = "a3rtpy"
version = "0.1.0"
description = ""
authors = ["shimakaze-git <shimakaze.soft+github@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
tox = "^3.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
a3rtpy_cli = "a3rtpy.cli:main"
